--- a/desafio/src/App.css
+++ b/desafio/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+header {
+    width: 100%;
+    height: 12vh;
+    background-color: #6D6DD1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background-image{
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
+}
+.back-img{
+    width: 110rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.position{
+    width: 85%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 12rem;
+    color: #ffff;
+}
+.title-class {
+    width: 311px;
+    height: 46px;
+    background-color: #58C7E4;
+}
+.title{
+    text-align: left;
+    font-size: 20px;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    opacity: 1;
+    padding-left: 1rem;
+}
+.description-class{
+    width: 28rem;
+}
+.description{
+    font-size: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.span-lg {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
 }
 
-.App-link {
-  color: #61dafb;
+.logo{
+    width: 11rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.social-icons{
+    width: 2rem;
+}
+
+.social{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 8%;
+}
+.social-botom{
+    width: 7rem;
+    background-color: #ffff;
+    border-radius: 6px;
+    text-decoration: none;
+    margin-right: 2%;
+    text-transform: uppercase;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
