--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,20 @@ body {
 
 .header {
   background-color: #6D6DD1;
-  height: 5rem;
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box-button-header {
   display: flex;
-  justify-content: flex-end; 
-  margin-right: 4rem;
+}
+
+.logo-tudum {
+  width: 17%;
+  height: 86px;
+  margin-left: 27rem;
 }
 
 .button-header {
@@ -28,7 +35,6 @@ body {
   opacity: 1;
   display: flex;
   align-items: center;
-  margin-top: 22px;
   margin-right: 1rem;
 }
 
@@ -51,4 +57,112 @@ body {
 .logo-twitter {
   width: 30%;
   margin-left: 15px;
+}
+
+.title-news {
+  font-size: 24px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  margin-left: 5rem;
+  margin-top: 5rem;
+  margin-bottom: -5rem;
+}
+
+.box-main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.box-news {
+  width: 30%;
+  height: 13rem;
+  padding: 1rem;
+  margin-top: 5rem;
+}
+
+.text {
+  background-color: #E4835875;
+  padding: 8px;
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  position: relative;
+  margin-top: -5rem;
+}
+
+.image-main {
+  width: 100%;
+  height: 13rem;
+}
+
+.button-footer {
+  background-color: #6D6DD1;
+  width: 100%;
+  height: 40px;
+  border: none;
+  margin-top: 5rem;
+}
+
+.text-button-footer {
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  color: #ffffff;
+  text-align: end;
+  margin-right: 8rem;
+}
+
+.footer {
+  background-color: #4F4F72;
+  width: 100%;
+  height: 6rem;
+}
+
+.box-footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.logo-footer {
+  width: 10%;
+  margin-top: 1rem;
+}
+
+.paragraph-footer {
+  font-size: 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  color: #ffffff;
+  width: 46%;
+  margin-top: 1rem;
+}
+
+.button-footer-1 {
+  width: 4%;
+  height: 3rem;
+  border-radius: 100%;
+  border: none;
+  background-color: #ffffff;
+  margin-top: 1rem;
+}
+
+.figure-commit {
+  width: 80%;
+  height: 29px;
+  margin-top: 5px;
+}
+
+.button-footer-2 {
+  width: 10%;
+  height: 3rem;
+  background-color: #ffffff;
+  border-radius: 50px;
+  border: none;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  margin-top: 1rem;
 }
