--- a/desafio/src/App.css
+++ b/desafio/src/App.css
@@ -137,6 +137,7 @@ header {
 
 .images-extras {
     width: 15rem;
+    margin-bottom: 8%;
 }
 
 .extras-box{
@@ -172,7 +173,9 @@ header {
 .extras-box-top{
     width: 526px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    justify-content: center;
 }
 
 .h1-extras-top{
@@ -182,17 +185,48 @@ header {
 }
 .span-images-extras{
     display: flex;
-    flex-direction: column;
+    align-items: center;
 }
-span-texts-extras {
+
+.span-texts-extras{
     display: flex;
+    align-items: center;
 }
 
 .h1-verdadis{
     color: #CF5454;
     text-transform: uppercase;
     font-size: 15px;
+    margin-bottom: 4px;
+    margin-left: 2rem;
 }
 .p-euzis {
     font-size: 15px;
+    width: 9.3rem;
+    margin: 0;
+    margin-left: 2rem;
+}
+
+
+
+.footer-color{
+    width: 100%;
+    height: 8vh;
+    background-color: #6D6DD1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    
+}
+.toTop{
+    font-size: 20px;
+    text-decoration: none;
+    color: #ffff;
+    margin-right: 6rem;
+}
+footer {
+    width: 100%;
+    height: 15vh;
+    background-color: #4F4F72;
+    opacity: 1;
 }
