--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ body {
 .logo-tudum {
   width: 17%;
   height: 86px;
-  margin-left: 27rem;
+  margin-left: 32rem;
 }
 
 @media (max-width:425px) {
@@ -110,10 +110,24 @@ body {
   margin-bottom: -5rem;
 }
 
+@media (max-width:425px) {
+  .title-news {
+    margin-left: 20px;
+    font-size: 28px;
+  }
+}
+
 .box-main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+@media (max-width:425px) {
+  .box-main {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .box-news-main {
@@ -122,9 +136,23 @@ body {
   height: 30rem;
 }
 
+@media (max-width:425px) {
+  .box-news-main {
+      margin-top: 2rem;
+      height: 16rem;
+      margin-left: 20px;
+  }
+}
+
 .image-news-main {
   width: 100%;
   height: 30rem;
+}
+
+@media (max-width:425px) {
+  .image-news-main {
+      height: 16rem;
+  }
 }
 
 .title-news-main {
@@ -141,6 +169,15 @@ body {
   margin-top: -9rem;
 }
 
+@media (max-width:425px) {
+  .title-news-main {
+      margin-top: -4rem;
+      font-size: 18px;
+      width: 36%;
+      margin-left: 0px;
+  }
+}
+
 .text-news-main {
   margin-top: 1rem;
   font-size: 18px;
@@ -150,11 +187,28 @@ body {
   margin-left: 3rem;
 }
 
+@media (max-width:425px) {
+  .text-news-main {
+    color: black;
+    margin-left: 0px;
+    font-size: 13px;
+    margin-top: 22px;
+  }
+}
+
 .box-news {
   width: 31%;
   height: 14rem;
   padding: 1rem;
   margin-top: 5rem;
+}
+
+@media (max-width:425px) {
+  .box-news {
+    width: 100%;
+    height: 14rem;
+    margin-top: 6rem;
+  }
 }
 
 .text {
@@ -169,9 +223,23 @@ body {
   margin-top: -5rem;
 }
 
+@media (max-width:425px) {
+  .text {
+    width: 80%;
+    margin-top: -4rem;
+    font-size: 10px;
+  }
+}
+
 .image-main {
   width: 100%;
   height: 14rem;
+}
+
+@media (max-width:425px) {
+  .image-main {
+    height: 17rem;
+  }
 }
 
 .title-news-2 {
@@ -183,6 +251,15 @@ body {
   margin-bottom: -9rem;
 }
 
+@media (max-width:425px) {
+  .title-news-2 {
+    margin-left: 12px;
+    margin-top: 10rem;
+    margin-bottom: -7rem;
+  }
+}
+
+
 .image-main-part-2 {
   width: 100%;
   height: 14rem;
@@ -193,6 +270,13 @@ body {
   height: 14rem;
   padding: 1rem;
   margin-top: 9rem;
+}
+
+@media (max-width:425px) {
+  .box-news-2 {
+    width: 100%;
+    margin-top: 7rem;
+  }
 }
 
 .text-author {
@@ -220,8 +304,20 @@ body {
   margin-left: 4rem;
 }
 
+@media (max-width:425px) {
+  .division {
+    display: none;
+  }
+}
+
 .box-finish-main {
   display: flex;
+}
+
+@media (max-width:425px) {
+  .box-finish-main {
+    flex-direction: column;
+  }
 }
 
 .box-footer-finish {
@@ -231,6 +327,15 @@ body {
   margin-top: 5rem;
   margin-left: 4rem;
 }
+
+@media (max-width:425px) {
+  .box-footer-finish {
+    width: 102%;
+    margin-top: 12rem;
+    margin-left: 21px;
+  }
+}
+
 
 .title-footer {
   font-size: 20px;
@@ -260,9 +365,22 @@ body {
   margin-top: 5rem;
 }
 
+@media (max-width:425px) {
+  .box-footer-finish-2 {
+    width: 100%;
+    margin-left: 20px;
+  }
+}
+
 .box-finish-2 {
   display: flex;
   margin-top: 2rem;
+}
+
+@media (max-width:425px) {
+  .box-finish-2 {
+    flex-direction: column;
+  }
 }
 
 .title-footer-2 {
@@ -270,6 +388,13 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   color: #CF5454;
+}
+
+@media (max-width:425px) {
+  .title-footer-2 {
+    font-size: 32px;
+    margin-bottom: -2rem;
+  }
 }
 
 .box-finish {
@@ -281,12 +406,26 @@ body {
   height: 9rem;
 }
 
+@media (max-width:425px) {
+  .image-footer-finish {
+    width: 80%;
+    height: 16rem;
+    margin-top: 1rem;
+  }
+}
 
 .text-finish {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-left: 2rem;
+}
+
+@media (max-width:425px) {
+  .text-finish  {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
 }
 
 .author-finish {
@@ -296,11 +435,37 @@ body {
   font-weight: bold;
 }
 
+@media (max-width:425px) {
+  .author-finish {
+    font-size: 20px;
+  }
+}
+
 .description-finish {
   width: 120%;
   font-size: 10px;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
+}
+
+@media (max-width:425px) {
+  .description-finish {
+    width: 69%;
+    font-size: 17px;
+    margin-top: 10px;
+  }
+}
+
+.box-footer-finish-3 {
+  display: none;
+}
+
+@media (max-width:425px) {
+  .box-footer-finish-3 {
+    display: block;
+    margin-top: 5rem;
+    margin-left: 20px;
+  }
 }
 
 .button-footer {
@@ -312,6 +477,12 @@ body {
   cursor: pointer;
 }
 
+@media (max-width:425px) {
+  .button-footer {
+    margin-top: 8rem;
+  }
+}
+
 .text-button-footer {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
@@ -321,10 +492,23 @@ body {
   margin-right: 8rem;
 }
 
+@media (max-width:425px) {
+  .text-button-footer {
+    font-size: 20px;
+  }
+}
+
+
 .footer {
   background-color: #4F4F72;
   width: 100%;
   height: 6rem;
+}
+
+@media (max-width:425px) {
+  .footer {
+    height: 20rem;
+  }
 }
 
 .box-footer {
@@ -333,10 +517,25 @@ body {
   align-items: center;
 }
 
+@media (max-width:425px) {
+  .box-footer {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+
+
 .logo-footer {
   width: 10%;
   margin-top: 1rem;
 }
+
+@media (max-width:425px) {
+  .logo-footer {
+    width: 36%;
+  }
+}
+
 
 .paragraph-footer {
   font-size: 10px;
@@ -345,10 +544,35 @@ body {
   color: #ffffff;
   width: 46%;
   margin-top: 1rem;
+  margin-left: 2rem;
+}
+
+@media (max-width:425px) {
+  .paragraph-footer {
+    font-size: 14px;
+    width: 75%;
+    text-align: center;
+    margin-top: 2rem;
+  }
+}
+
+.buttons-footer {
+    display: flex;
+    justify-content: space-evenly;
+    width: 35%;
+}
+
+@media (max-width:425px) {
+  .buttons-footer {
+    display: flex;
+    justify-content: space-evenly;
+    width: 95%;
+    margin-top: 1rem;
+  }
 }
 
 .button-footer-1 {
-  width: 4%;
+  width: 11%;
   height: 3rem;
   border-radius: 100%;
   border: none;
@@ -357,14 +581,26 @@ body {
   cursor: pointer;
 }
 
+@media (max-width:425px) {
+  .button-footer-1 {
+    width: 12%;
+  }
+}
+
 .figure-commit {
   width: 80%;
   height: 29px;
   margin-top: 5px;
 }
 
+@media (max-width:425px) {
+  .figure-commit {
+    width: 74%;
+  }
+}
+
 .button-footer-2 {
-  width: 10%;
+  width: 29%;
   height: 3rem;
   background-color: #ffffff;
   border-radius: 50px;
@@ -373,4 +609,10 @@ body {
   font-weight: bold;
   margin-top: 1rem;
   cursor: pointer;
+}
+
+@media (max-width:425px) {
+  .button-footer-2 {
+    width: 24%;
+  }
 }
