adding header and buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+html, *{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container_header{
+  width: 100%;
+  height: 18vh;
+  background: #9C0B0E;
   display: flex;
-  flex-direction: column;
+  margin-bottom: 4rem;
+}
+
+.box_image_header{
+  width: 55%;
+  height: 100%;
+  display:flex;
+  justify-content: flex-end;
   align-items: center;
+}
+
+.image_logo{
+  width: 30%;
+}
+
+.box_btn_header{
+  width: 45%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 4rem;
+}
+
+.btn{
+  width: 18%;
+  height: 25%;
+  margin: 0 8px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 5px;
+  border-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.img_btn{
+  height: 50%;
+  margin-right: 6px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text_btn{
+  font-size: 0.8rem;
 }
