--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,211 @@ html, *{
 .text_btn{
   font-size: 0.8rem;
 }
+
+.container_main{
+  width: 100%;
+  color: #ffffff;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrap_main{
+  width: 90%;
+  height: 70vh;
+}
+
+.box_img_main{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image_main{
+  width: 100%;
+  height: 100%;
+}
+
+.box_title{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  color: #000000;
+  margin: -160px 0 0 30px;
+
+}
+
+.title_main{
+  width: 50%;
+  height: 45px;
+  font-size: 2rem;
+  font-weight: 600;
+  background-color: #59c7e4;
+  color: #FFFFFF;
+  padding-left: 15px;
+}
+
+.text_main{
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 30px;
+  color: #FFFFFF;
+}
+
+.title{
+  font-size: 1.5em;
+  color:#000000;
+  display: flex;
+  justify-content: flex-end;
+  margin: 6rem 65rem 3px 0;
+}
+
+.wrap_news{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.box_image{
+  width: 388px;
+  height: 258px;
+}
+
+.image_news{
+  width: 100%;
+  height: 100%;
+}
+
+.wrap{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: -20px 0 0;
+  border-bottom: 1px solid #000000;
+  padding-bottom: 30px;
+}
+
+.box_news{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.box_description{
+  width: 388px;
+  height: 10vh;
+  display: flex;
+  flex-direction: column;
+  margin-top: 4px;
+}
+
+
+.title_news{
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #59c7e4;
+  margin-bottom: 5px;
+}
+
+.paragrafo{
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #000000;
+  max-width: 100%; 
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+}
+
+container_end_main{
+  width: 90%;
+}
+
+.box_texts{
+  width: 55%;
+  display: flex;
+
+}
+
+.texts1{
+  width: 45%;
+  font-size: 1.2rem;
+  color: #59c7e4;
+  margin: 4rem 0 1rem;
+}
+
+.texts2{
+  width: 55%;
+  font-size: 1.2rem;
+  color:#e29797;
+  margin: 4rem 0 1rem 20px;
+}
+
+.end_main{
+  width: 55%;
+  height: 55vh;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.wrap_end_main{
+  width: 45%;
+}
+
+.box_titles_news{
+  width: 100%;
+  height: 11vh;
+  border-bottom: 0.5px solid #000000;
+  display:flex;
+  justify-content: space-between;
+}
+
+.title_main_news{
+  font-size: 1rem;
+  color:#000000;
+}
+
+.wrap_end_main_two{
+  width: 55%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 20px;
+}
+
+
+.box_end_main{
+  width: 100%;
+  height: 46%;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.image{
+width: 55%;
+height: 100%;
+}
+
+.box_paragrafo_end_main{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 15px;
+}
+
+
+.paragrafo_end_main1{
+  font-size: 0.8rem;
+  color:#e29797;
+}
+
+.paragrafo_end_main{
+  font-size: 0.8rem;
+  color:#000000;
+}
