--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,19 @@ html, *{
   margin-bottom: 4rem;
 }
 
+@media (max-width:1024px){
+  .container_header{
+    height: 15vh;
+  }
+}
+
+@media (max-width:375px){
+  .container_header{
+    height: 10vh;
+    margin-bottom: 2rem;
+  }
+}
+
 .box_image_header{
   width: 55%;
   height: 100%;
@@ -36,6 +49,12 @@ html, *{
   padding-right: 4rem;
 }
 
+@media (max-width:375px){
+  .box_btn_header{
+    display: none;
+  }
+}
+
 .btn{
   width: 18%;
   height: 25%;
@@ -45,6 +64,12 @@ html, *{
   align-items: center;
   border-radius: 5px;
   border-style: none;
+}
+
+@media (max-width:1024px){
+  .btn{
+    width: 24%
+  }
 }
 
 .img_btn{
@@ -69,6 +94,12 @@ html, *{
   height: 70vh;
 }
 
+@media (max-width:375px){
+  .wrap_main{
+    height: 30vh;
+  }
+}
+
 .box_img_main{
   width: 100%;
   height: 100%;
@@ -90,6 +121,21 @@ html, *{
 
 }
 
+@media (max-width:1024px){
+  .box_title{
+   margin: -160px 0 0 30px;
+  }
+}
+
+
+@media(max-width:375px){
+  .box_title{
+    width: 100%;
+    margin: -18px 0 0 0;
+  }
+}
+
+
 .title_main{
   width: 50%;
   height: 45px;
@@ -100,12 +146,31 @@ html, *{
   padding-left: 15px;
 }
 
+@media (max-width:375px){
+  .title_main{
+    width: 40%;
+    height: 20%;
+    font-size: 0.8rem;
+    font-weight: 400;
+    padding-left: 9px;
+  }
+}
+
 .text_main{
   width: 70%;
   font-size: 1.4rem;
   font-weight: bold;
   line-height: 30px;
   color: #9C0B0E;
+}
+
+@media (max-width:375px){
+  .text_main{
+    width: 70%;
+    font-size: 0.8rem;
+    line-height: 15px;
+    margin-top: 5px;
+  }
 }
 
 .title{
@@ -116,6 +181,20 @@ html, *{
   margin: 6rem 65rem 3px 0;
 }
 
+@media (max-width:1024px){
+  .title{
+    font-size: 1.2em;
+    width: 90%;
+    margin: 6rem 100rem 3px 0;
+  }
+}
+
+@media (max-width:375px){
+  .title{
+    margin: 4rem 28rem 0 0;
+  }
+}
+
 .wrap_news{
   width: 90%;
   display: flex;
@@ -123,9 +202,31 @@ html, *{
   flex-wrap: wrap;
 }
 
+@media (max-width:375px){
+  .wrap_news{
+    flex-wrap: none;
+    flex-direction: column;
+  }
+}
+
 .box_image{
   width: 388px;
   height: 258px;
+}
+
+@media (max-width:1024px){
+  .box_image{
+    width: 300px;
+    height: 200px;
+  }
+}
+
+@media (max-width:375px){
+  .box_image{
+    width: 337px;
+    height: none;
+    margin: 20px auto 4px;
+  }
 }
 
 .image_news{
@@ -150,6 +251,12 @@ html, *{
   margin: 20px 0;
 }
 
+@media (max-width:375px){
+  .box_nws{
+    margin: 10px 0;
+  }
+}
+
 .box_description{
   width: 388px;
   height: 10vh;
@@ -158,6 +265,11 @@ html, *{
   margin-top: 4px;
 }
 
+@media (max-width:1024px){
+  .box_description{
+    width: 300px;
+  }
+}
 
 .title_news{
   font-size: 0.8rem;
@@ -180,14 +292,14 @@ html, *{
   width: 90%;
 }
 
-.box_texts{
-  width: 55%;
-  display: flex;
-
+@media(max-width:375px){
+  .container_end_main{
+    margin-top: 22rem;
+  }
 }
 
 .texts1{
-  width: 45%;
+  width: 100%;
   font-size: 1.2rem;
   color: #9C0B0E;
   margin: 4rem 0 1rem;
@@ -207,13 +319,30 @@ html, *{
   justify-content: flex-end;
 }
 
+
+@media (max-width:375px){
+  .end_main{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .wrap_end_main{
   width: 45%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (max-width:375px){
+  .wrap_end_main{
+    width: 90%;
+  }
 }
 
 .box_titles_news{
   width: 100%;
-  height: 9vh;
+  height: 7vh;
   border-bottom: 0.5px solid #000000;
   display:flex;
   justify-content: space-between;
@@ -233,18 +362,35 @@ html, *{
   margin-left: 20px;
 }
 
+@media (max-width:375px){
+  .wrap_end_main_two{
+    width: 90%;
+  }
+}
+
 
 .box_end_main{
   width: 100%;
-  height: 46%;
+  height: 40%;
   display: flex;
   justify-content: space-between;
 }
 
+@media (max-width:1024px){
+  .box_end_main{
+    height: 40%;
+  }
+}
 
 .image{
 width: 55%;
 height: 100%;
+}
+
+@media (max-width:1024px){
+  .image{
+    height: 95%;
+  }
 }
 
 .box_paragrafo_end_main{
@@ -272,6 +418,21 @@ height: 100%;
   margin-top: 25vh;
 }
 
+@media (max-width:1024px){
+  .container_footer{
+    margin-top: 15vh;
+  }
+}
+
+@media (max-width:375px){
+  .container_footer{
+    margin-top: 20vh;
+    height: 40vh;
+  }
+}
+
+
+
 .footer{
   width: 100%;
   height: 100%;
@@ -286,6 +447,13 @@ height: 100%;
   align-items: center;
 }
 
+@media (max-width:375px){
+  .footer_part1{
+   height: 25%;
+  }
+}
+
+
 .btn_footer{
   width: 15%;
   height: 20%;
@@ -296,8 +464,23 @@ height: 100%;
   outline: #9C0B0E;
 }
 
+@media (max-width:375px){
+  .btn_footer{
+  width: 80%;
+  }
+}
+
 .btn_footer p{
   font-size: 1rem;
+}
+
+@media (max-width:375px){
+  .btn_footer p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   font-size: 1.5rem;
+  }
 }
 
 .footer_part2{
@@ -309,11 +492,25 @@ height: 100%;
   background-color: #5C0305;
 }
 
+@media (max-width:375px){
+  .footer_part2{
+    height: 75%;
+    flex-direction: column-reverse;
+  }
+}
+
+
 .block1{
   width: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width:375px){
+  .block1{
+    display: none;
+  }
 }
 
 .logo_footer{
@@ -323,6 +520,22 @@ height: 100%;
 .block2{
   width: 60%;
 }
+
+@media (max-width:1024px){
+  .block2{
+    width: 55%;
+  }
+}
+
+@media (max-width:375px){
+  .block2{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+}
+
 
 .block2 p{
   width: 90%;
@@ -336,6 +549,18 @@ height: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+@media (max-width:1024px){
+  .block3{
+    width: 25%;
+  }
+}
+
+@media (max-width:375px){
+  .block3{
+    width: 70%
+  }
 }
 
 
@@ -361,3 +586,4 @@ height: 100%;
   background: #FFFFFF;
   border-style: none;
 }
+
