--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+*{ 
+  margin: 0; 
+  padding: 0;
+  box-sizing: border-box;
+}
+/* html{
+  width: 1920px;
+  height: 4158px;
+
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+
+} */
 .App {
   text-align: center;
 }
@@ -36,3 +48,226 @@
     transform: rotate(360deg);
   }
 }
+
+.Container{
+  background: #6D6DD1  0% 0% no-repeat padding-box;
+  
+  width: 1920px;
+  height: 122px;
+
+  display: flex;
+  justify-items: flex-start;
+}
+
+.Logo{
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 184px;
+  height: 92px;
+}
+.Menu{
+  width: 18px;
+  height: 12px; 
+
+  display: none;
+}
+.Facebook-image{
+  width: 20px;
+  height: 17px; 
+  display: flex;
+}
+.Twitter-image{
+  width: 20px;
+  height: 17px; 
+  display: flex;
+  
+}
+.Facebook{
+  margin-right: 2%;
+}
+.Twitter{
+  margin-right: 5%;
+}
+.Facebook-text{
+  text-align: center;
+  font: normal normal 300 10px/14px Open Sans;
+  color: #000000;
+  text-transform: uppercase;
+  opacity: 1;
+  align-items: center;
+
+  width: 109px;
+  height: 35px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  opacity: 1;
+
+  display: flex;
+  justify-content: center;
+}
+.Twitter-text{
+  text-align: center;
+  font: normal normal 300 10px/14px Open Sans;
+  color: #000000;
+  text-transform: uppercase;
+  opacity: 1;
+  align-items: center;
+
+  width: 109px;
+  height: 35px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  opacity: 1;
+
+  display: flex;
+  justify-content: center;
+}
+.Logo{
+  display: flex;
+  align-items: center;
+
+  width: 184px;
+  height: 92px;
+}
+.images-map1{
+  display: flex;
+  margin-top: 7rem;
+  margin-left: 7rem;
+
+  width: 100%;
+  height: 682px;
+  opacity: 1;
+}
+.title-map1{
+  position: absolute;
+  top: 743px;
+  left: 207px;
+  width: 311px;
+  height: 46px;
+  background: #58C7E4 0% 0% no-repeat padding-box;
+  opacity: 1;
+  text-align: center;
+  align-items: center;
+}
+.description-map1{
+  margin-top: -115px;
+  top: 806px;
+  left: 207px;
+  width: 500px;
+  height: 150px;
+  
+  font: normal normal 600 15px/15px Open Sans;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  opacity: 1;
+}
+.images-map2,.images-map3{
+  display: flex;
+  margin-top: 5rem;
+  margin-left: 7rem;
+
+  width: 300px;
+  height: 200px;
+  opacity: 1;
+}
+.Map2, .Map3{
+  width: 30%;
+  height: 14%;
+  padding: 1rem;
+} 
+.Map-2, .Map-3{
+  display: flex;
+  flex-wrap: wrap;
+}
+.title-map3,.description-map3{
+  display: flex;
+  align-items: center;
+  width: 300px;
+}
+.Map-4{
+  text-align: left;
+  font: normal normal normal 20px/27px Open Sans;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+
+  width: 526px;
+  height: 353px;
+
+}
+.images-map5{
+  width: 248px;
+  height: 248px;
+} 
+.Map-5{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-items: flex-end;
+}
+.Footer-box{
+  display: flex;
+}
+.Footer-back{
+  width:1920px;
+  height: 70px;
+  background: #6D6DD1 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+.Footer-back-text{
+  width: 274px;
+  height: 27px;
+  text-align: center;
+  font: normal 600 20px/27px Open Sans;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  opacity: 1;
+
+  display: flex;
+  flex-direction: row;
+}
+.Footer-text{
+  width: 1920px;
+  height: 140px;
+  background: #4F4F72 0% 0% no-repeat padding-box;
+  opacity: 1;
+}
+.Footer-logo{
+  width: 184px;
+  height: 92px;
+}
+.Footer-box1{
+  display: flex;
+  
+  width: 39px;
+  height: 39px;
+  background: #FFFFFF 0% 0% ;
+
+  box-sizing: border-box;
+  border-radius: 100%;
+}
+.Footer-box2{
+  display: flex;
+  
+  margin-left: 3%;
+  width: 39px;
+  height: 39px;
+  background: #FFFFFF 0% 0% ;
+
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+.Footer-box3{
+  display: flex;
+  justify-items: self-end;
+  margin-left: 3%;
+  width: 39px;
+  height: 39px;
+  background: #FFFFFF 0% 0% ;
+
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+
